--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Anteneh portfolio</title>
 </head>
 <body>
-    <H1>Anteneh worku porfolio</H1>
+    <H1>Anteneh worku portfolio</H1>
     <h2>I'm a Web Developer</h2>
     <hr />
    <h2> <a href="./public/birthday-invite.html">Move Rank project</a></h2>
